[tool.poetry]
name = "fastapi"
version = "0.1.0"
description = ""
authors = ["Rajesh Baghel <rajeshb3297@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
pydantic = "^1.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
